<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_product_tag"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_shopping_basket"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_day_agenda"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_agenda_del_dia" />
        <item
            android:id="@+id/nav_week_agenda"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_agenda_semanal" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
    <!--
        <item android:title="Reportes">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_receipt"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_receipt"
                    android:title="Send" />
            </menu>
        </item>
    -->
    </menu>
